Resolve button text alignment issue in advance story

--- a/raaghu-elements/src/rds-datepicker/rds-datepicker.css
+++ b/raaghu-elements/src/rds-datepicker/rds-datepicker.css
@@ -8,3 +8,7 @@
   cursor: not-allowed; /* Show a 'not allowed' cursor */
   background-color: #EBEBE4 !important;
 }
+
+.dropdown .btn {
+  text-align: center;
+}
